...
      </View>

      <FlatList
        ref={listRef}
        onViewableItemsChanged={onViewableItemsChanged}
        viewabilityConfig={VIEWABILITY_CONFIG}
        testID="home-activity-list"
        data={filteredActivities}
        renderItem={renderActivity}
        keyExtractor={(item) => item.id}
        extraData={isDark}
        ListHeaderComponent={renderListHeader}
        ListEmptyComponent={renderListEmpty}
...
