...
  return (
    <GestureDetector gesture={scrubGesture}>
      <View
        ref={listContainerRef}
        style={styles.tabScrollView}
        onLayout={handleContainerLayout}
        testID="activity-sections-list"
      >
        <FlatList
          ref={flatListRef}
          data={groups}
          keyExtractor={keyExtractor}
          renderItem={renderEncounterItem}
...
